--- a/public/Sites/myindex.html
+++ b/public/Sites/myindex.html
@@ -18,8 +18,9 @@
     </header>
     <div class="sidebar1">
         <ul class="nav">
-            <li><a href="Fotos.html">Fotos</a></li>
-            <li><a href="https://dplehn.ga">Upload</a></li>
+            <li><a href="Fotos.html" target="_blank">Fotos</a></li>
+            <li><a href="http://localhost:3000" target="_blank">Upload</a></li>
+            <li><a href="http://www.ede.de" target="_blank">E/D/E</a></li>
             <li><a href="#">Hyperlink 3</a></li>
             <li><a href="#">Hyperlink 4</a></li>
         </ul>
